--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,7 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*).(js|css|png|jpg|svg|ico|json|map)", "destination": "/$1.$2" },
-    { "source": "/(.*)", "destination": "/index.html" }
+  "rewrites" :[
+    {"source":"/(.*)" , "destination" : "/" }
   ]
 }
